# vampire

./: .gitignore  CMakeLists.txt
hdr/: program.hpp  vio.hpp
src/cells/: CMakeLists.txt
src/config/: CMakeLists.txt
src/constants/: CMakeLists.txt
src/create/: CMakeLists.txt
src/cuda/: CMakeLists.txt
src/data/: CMakeLists.txt
src/dipole/: CMakeLists.txt
src/environment/: CMakeLists.txt
src/exchange/: CMakeLists.txt  exchange_fields.cpp
src/gpu/: CMakeLists.txt
src/hamr/: CMakeLists.txt
src/hierarchical/: CMakeLists.txt
src/ltmp/: CMakeLists.txt
src/micromagnetic/: CMakeLists.txt
src/montecarlo/: CMakeLists.txt
src/mpi/: CMakeLists.txt
src/neighbours/: CMakeLists.txt
src/opencl/: CMakeLists.txt
src/program/: CMakeLists.txt
src/qvoronoi/: CMakeLists.txt
src/random/: CMakeLists.txt
src/simulate/: CMakeLists.txt
src/spintorque/: CMakeLists.txt
src/spintransport/: CMakeLists.txt
src/statistics/: CMakeLists.txt
src/unitcell/: CMakeLists.txt
src/utility/: CMakeLists.txt
src/vio/: CMakeLists.txt
